Hight of comments area is too big. Fixed #992

--- a/abixen-platform-web-client/src/main/web/application/modules/comment/scss/styles.scss
+++ b/abixen-platform-web-client/src/main/web/application/modules/comment/scss/styles.scss
@@ -109,5 +109,5 @@
 }
 
 .comments-content{
-  height: 438px;
+  height: 421px;
 }
